# interfaceGenerator

./: .aspell.pws  404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
Config/: index.html
Generation/: index.html
InterfaceFormat/: index.html
cpig/: Readme.md  __init__.py  cli.py  generateCode.py  loadInterface.py  log.txt
cpig/templates/: __init__.py  ajv.j2  fastApiExamples.j2  fastApiRoutes.j2  httpRouteUtils.j2  javaScriptExamples.j2  mithrilConnectors.j2  mithrilConnectors.md  mithrilExamples.j2  mockServerExamples.j2  mockServiceWorkers.j2  natsSubjects.j2  pythonExamples.j2  webSocket.j2  webSocket.md
docs/: Config.md  Generation.md  InterfaceFormat.md  Readme.md
scripts/: installEditableCpigCommand
search/: search_index.json
