[metadata]
name = interfaceGenerator
version = 0.0.1
description = A simple Python tool to generate computer readable Python and JavaScript interfaces from Markdown/YAML descriptions.
author = Stephen Gaito
author_email = stephen@perceptisys.co.uk
url = https://github.com/computePods/interfaceGenerator

[options]
packages = cpig
install_requires =
  click                    >= 7.0
  jinja2                   >= 2.10.1
  pyyaml                   >= 5.3.1
  datamodel-code-generator >= 0.11.5

[options.entry_points]
console_scripts =
    cpig = cpig:cli
